[metadata]
name = zstlib
url = https://github.com/zombig/zstlib
project_urls =
  Code = https://github.com/zombig/zstlib
  Issue tracker = https://github.com/zombig/zstlib
license = MIT
author = zombig
maintainer = zombig
maintainer_email = zstlib@zombig.name
description = Small useful python tools set
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src
